[package]
name = "cloudsync"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Provides a trait to easily sync serializable objects with firestore"
authors = [ "sylkos" ] 
repository = "https://github.com/sylk0s/cloudsync"
homepage = "https://github.com/sylk0s/cloudsync"
documentation = "https://docs.rs/cloudsync"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LISCENSE"]
readme = "README.md"
keywords = ["firestore", "client"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firestore = "0.11"
async-trait = "0.1.57"
serde = {version = "1.0", features = ["derive"] }
tokio = { version = "1.23.0", features = ["macros"] }


[dependencies.gcloud-sdk]
version = "0.19"
features = ["google-firestore-v1"]
